Context menu items stay highlighted after moving cursor away from them
Categories
(Firefox :: Menus, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox110 | --- | wontfix |
| firefox111 | --- | verified |
| firefox112 | --- | verified |
People
(Reporter: gregp, Assigned: emilio)
References
(Regressed 2 open bugs, Regression)
Details
(Keywords: regression)
Attachments
(2 files)
|
576.86 KB,
video/webm
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
|
Details | Review |
Steps to reproduce:
- Right click a webpage
- Hover context menu items with your cursor
- Move your cursor away from the context menu
Actual results:
Menu item stays highlighted
Expected result:
Menu item is not highlighted
| Assignee | ||
Comment 1•3 years ago
|
||
Yeah before this happened inconsistently. It's not terribly hard to fix but I don't think it's particularly an issue?
| Assignee | ||
Comment 2•3 years ago
|
||
Err didn't intend to close without further discussion. Might be worth checking behavior across platforms and native toolkits.
| Reporter | ||
Comment 3•3 years ago
|
||
I can reproduce this in my Windows VM as well. It just feels a bit weird because other implementations don't have this behavior. I tested native GTK menus and Windows File Explorer.
| Assignee | ||
Comment 4•3 years ago
|
||
I knew this sounded familiar, see bug 1811466.
The patch is a one-liner, the rest is a test. I'd ask smaug for review
but he's on PTO so... Markus, maybe you can take a look?
Updated•3 years ago
|
Comment 5•3 years ago
|
||
Set release status flags based on info from the regressing bug 1805414
Updated•3 years ago
|
Comment 8•3 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/87139fa929ac
https://hg.mozilla.org/mozilla-central/rev/8f604548e718
Updated•3 years ago
|
Updated•3 years ago
|
| Assignee | ||
Comment 10•3 years ago
|
||
Comment on attachment 9318528 [details]
Bug 1817518 - De-select closed menuitems on mouseout. r=mstange
Beta/Release Uplift Approval Request
- User impact if declined: comment 0
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Simple one-liner + test.
- String changes made/needed: none
- Is Android affected?: No
| Assignee | ||
Updated•3 years ago
|
Comment 11•3 years ago
|
||
Comment on attachment 9318528 [details]
Bug 1817518 - De-select closed menuitems on mouseout. r=mstange
Approved for 111.0b8
Comment 12•3 years ago
|
||
| bugherder uplift | ||
https://hg.mozilla.org/releases/mozilla-beta/rev/a97ef3be2b97
https://hg.mozilla.org/releases/mozilla-beta/rev/d89b13e01681
Updated•3 years ago
|
Comment 13•3 years ago
|
||
Reproduced the issue on Firefox 112.0a1 (2023-02-17) on Ubuntu 22.04 by following the STR from Comment 0.
The issue is fixed on Firefox 111.0b8 (treeherder build) and Firefox 112.0a1 (2023-03-02) on the same system.
Description
•