Bug 1817518 - De-select closed menuitems on mouseout. r=mstange

I knew this sounded familiar, see bug 1811466.

The patch is a one-liner, the rest is a test. I'd ask smaug for review
but he's on PTO so... Markus, maybe you can take a look?

Differential Revision: https://phabricator.services.mozilla.com/D170269